<resources>
    <string name="app_name">volleyDemo</string>
    <string name="enter_name">Enter Name:</string>
    <string name="enter_pass">Enter Password:</string>
    <string name="enter_email">Enter Email:</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="deleter">Delete</string>
    <string name="gson_activity">Gson Activity</string>
</resources>
